# rp-engine

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.yaml  import_npc_data.py  import_writing_data.py  npc_intel_cli.py  open_browser.py  pyproject.toml  rp_engine.db-shm  rp_engine.db-wal  start.bat  start.sh  test_npc.db  ui.html  writing_intel_cli.py
docs/: client-guide.md  modules.md  rp-claude-md-template.md  system-prompt-guide.md
frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
npc_intelligence/: __init__.py  _token_utils.py  classifier.py  db.py  engine.py  feedback.py  injection.py  proficiency.py  retrieval.py  types.py
pattern_intelligence/: __init__.py  db.py  engine.py  feedback.py  injection.py  types.py
rp_engine/: __init__.py  __main__.py  config.py  container.py  database.py  dependencies.py  main.py  mcp_wrapper.py
tests/: conftest.py  test_analysis_pipeline.py  test_analyze_router.py  test_ancestry_resolver.py  test_branch_manager.py  test_card_indexer.py  test_card_suggest.py  test_cards_router.py  test_context_engine.py  test_database.py  test_entity_extractor.py  test_exchange_validation.py  test_exchanges_router.py  test_file_watcher.py  test_frontmatter.py  test_graph_resolver.py  test_guidelines_router.py  test_health.py  test_json_helpers.py  test_llm_client.py  test_mcp_wrapper.py  test_normalization.py  test_npc_engine.py  test_npc_router.py  test_response_analyzer.py  test_rp_router.py  test_scene_classifier.py  test_sessions_router.py  test_state_manager.py  (+7 more)
(+258 files in other folders)
