[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rp-engine"
version = "0.1.0"
description = "REST API for managing roleplay sessions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "aiosqlite>=0.19",
    "watchfiles>=0.21",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pydantic>=2.5",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
rp-engine = "rp_engine.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["rp_engine*", "npc_intelligence*", "writing_intelligence*"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "SIM105", "SIM102", "SIM116", "RUF005"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
